--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "styled-components": "^4.3.2",
     "typography": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
   },
